@@ -14,4 +14,5 @@ matsize(1)
 
 sizebyte(0) == if (long_is_64, 16, 8)
 sizebyte(x+1) == if (long_is_64, 80, 40)
-sizebyte([x,y]) == if (long_is_64, 136, 68)
+sizebyte([x,y]) == if (long_is_64, 168, 84)
+sizebyte([List(1)]) == if (long_is_64, 80, 40)
